samples/_failures_safe/1761097863_641d9c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d654cd4a.c: In function ‘main’:
./samples/SAFE/__tmp_d654cd4a.c:165:9: error: expected expression at end of input
  165 |         (
      |         ^
./samples/SAFE/__tmp_d654cd4a.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d654cd4a.c:165:9: error: expected declaration or statement at end of input
